@@ -4,6 +4,7 @@ ikiwiki (2.53) UNRELEASED; urgency=low
     (Gabriel McManus)
   * attachment: Fix an uninitialised value warning when editing a page
     that currently has no attachments.
+  * Fix a bug with links to pages whose names contained colons.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 01:52:48 -0400
 
